<resources>
    <string name="app_name">Easy Food</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="over_popular_items">over popular items</string>
    <string name="what_would_you_like_to_eat">What would you like to eat</string>
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="category_beef">Category : Beef</string>
    <string name="area_palestine">Area : Palestine</string>
    <string name="instructions">- Instructions :</string>
    <string name="favourites">Favourites</string>
    <string name="category">Category</string>
    <string name="category_name">Category Name</string>
</resources>