<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.HomeFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/startMargin"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.07"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endMargin"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95"/>

    <TextView
        android:id="@+id/homeTV"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/home"
        android:layout_marginTop="26dp"
        app:layout_constraintStart_toStartOf="@id/startMargin"
        android:textColor="@color/primary"
        android:textSize="30sp"
        android:textStyle="bold"
        android:fontFamily="@font/myfont"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/searchIV"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/search"
        app:layout_constraintEnd_toEndOf="@id/endMargin"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"/>

    <TextView
        android:id="@+id/tv_would_like_to_have"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/what_would_you_like_to_eat"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@id/startMargin"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="@font/myfont"
        app:layout_constraintTop_toBottomOf="@+id/homeTV"/>
    
    <androidx.cardview.widget.CardView
        android:id="@+id/mealImgCardView"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="25dp"
        app:cardCornerRadius="10dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintStart_toStartOf="@id/startMargin"
        app:layout_constraintEnd_toEndOf="@id/endMargin"
        app:layout_constraintTop_toBottomOf="@id/tv_would_like_to_have">

        <ImageView
            android:id="@+id/imgRandomMeal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"/>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvPopularItem"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/over_popular_items"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@id/startMargin"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="@font/myfont"
        app:layout_constraintTop_toBottomOf="@+id/mealImgCardView"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/popularMealRv"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        app:layout_constraintStart_toStartOf="@id/startMargin"
        app:layout_constraintTop_toBottomOf="@id/tvPopularItem"/>

    <TextView
        android:id="@+id/tvCategories"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/categories"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@id/startMargin"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="@font/myfont"
        app:layout_constraintTop_toBottomOf="@+id/popularMealRv"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/categoriesCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        app:cardCornerRadius="10dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintStart_toStartOf="@id/startMargin"
        app:layout_constraintEnd_toEndOf="@id/endMargin"
        app:layout_constraintTop_toBottomOf="@id/tvCategories">
        
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/viewCategoriesRv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"/>
        
    </androidx.cardview.widget.CardView>
    
</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
