<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MealActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:backgroundTint="@color/g_black">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="@color/accent"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:title="Meal Name">

            <ImageView
                android:id="@+id/imgMealDetail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"/>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolBar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:layout_collapseMode="pin"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnFavourite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/favorite"
        app:backgroundTint="@color/accent"
        app:tint="@color/white"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom|end"
        android:layout_marginEnd="10dp"/>
    
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/categoriesTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_beef"
                android:textStyle="bold"
                android:textColor="@color/g_black"
                android:backgroundTint="@color/g_black"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                app:drawableLeftCompat="@drawable/category"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/locationTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/area_palestine"
                android:textStyle="bold"
                android:textColor="@color/g_black"
                android:backgroundTint="@color/g_black"
                android:layout_weight="1"
                app:drawableLeftCompat="@drawable/location"
                android:layout_marginStart="20dp"
                app:layout_constraintStart_toEndOf="@+id/categoriesTv"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/instructionTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/instructions"
                android:textStyle="bold"
                android:fontFamily="@font/myfont"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@+id/categoriesTv"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"/>

            <TextView
                android:id="@+id/descriptionTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/instructionTV"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <ImageView
        android:id="@+id/imgYoutube"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/youtube"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="10dp"/>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressIndicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom"
        android:visibility="gone"/>



</androidx.coordinatorlayout.widget.CoordinatorLayout>